# Macchinine

./: Cargo.toml  README.md  a.c  a.out  build.gradle  docker-compose.yaml  run.sh  server.Dockerfile  tree
SmartCar_Core/: SmartCar_Core.ino
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mindshub/macchinine/: CameraHelper.java  MainActivity.java
src/: .egui.rs.swp  ble.rs  bluetooth.rs  camera.rs  discover_services.rs  egui.rs  egui_wrapper.rs  gatt_echo.inc  joistick.rs  lib.rs  main-backup.rs  main.rs  relay.rs  relay2.rs
src/setup/: android.rs  mod.rs  pc.rs
