[package]
name = "macchinine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.10.1"
#rand = "0.8.5"

futures = "0.3.28"

bluer = { version = "0.15.7", features = ["bluetoothd"], default-features = false }
tokio = {version="1.27.0", features=["rt"]}
colored = "2.0.0"

eframe = "0.21.3"