[package]
name = "macchinine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.11.0"
#rand = "0.8.5"

futures = "0.3.31"

bluer = { version = "0.17.3", features = ["bluetoothd"], default-features = false }
tokio = {version="1.27.0", features=["rt"]}
colored = "3.0.0"

eframe = "0.31.1"